Update Dockerfile to install speedtest-cli directly

--- a/speedtest-cli/Dockerfile
+++ b/speedtest-cli/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --no-cache \
     jq
 
 # Instalar speedtest-cli
-RUN pip3 install --no-cache-dir speedtest-cli
+RUN apk add --no-cache python3 py3-pip curl jq py3-speedtest-cli
 
 # Copiar arquivos do add-on
 COPY run.sh /
@@ -17,5 +17,6 @@ RUN chmod a+x /run.sh
 
 # Copiar arquivos web
 COPY www /www
+
 
 CMD [ "/run.sh" ]
