--- a/speedtest-cli/Dockerfile
+++ b/speedtest-cli/Dockerfile
@@ -1,22 +1,17 @@
-ARG BUILD_FROM
-FROM $BUILD_FROM
+# Imagem base do Home Assistant para arquitetura Intel/AMD (amd64)
+ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.19
+FROM ${BUILD_FROM}
 
-# Instalar dependências
-RUN apk add --no-cache \
-    python3 \
-    py3-pip \
-    curl \
-    jq
-
-# Instalar speedtest-cli
+# Instalar dependências e speedtest-cli
 RUN apk add --no-cache python3 py3-pip curl jq py3-speedtest-cli
 
-# Copiar arquivos do add-on
-COPY run.sh /
+# Copiar script principal do add-on
+COPY run.sh /run.sh
 RUN chmod a+x /run.sh
 
-# Copiar arquivos web
+# Copiar arquivos web (se existirem)
 COPY www /www
 
-
+# Executar o script
 CMD [ "/run.sh" ]
+
