Refactor Dockerfile to use virtual environment for speedtest-cli
Updated the Dockerfile to create a virtual environment for speedtest-cli and install it within that environment.

--- a/speedtest-cli/Dockerfile
+++ b/speedtest-cli/Dockerfile
@@ -1,17 +1,25 @@
-# Imagem base do Home Assistant para arquitetura Intel/AMD (amd64)
+# Base para sistemas x86_64 (Intel/AMD)
 ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.19
 FROM ${BUILD_FROM}
 
-# Instalar dependências e speedtest-cli
-RUN apk add --no-cache python3 py3-pip curl jq py3-speedtest-cli
+# Instalar dependências do sistema
+RUN apk add --no-cache python3 py3-pip curl jq
 
-# Copiar script principal do add-on
+# Criar ambiente virtual e instalar o speedtest-cli dentro dele
+RUN python3 -m venv /opt/venv && \
+    . /opt/venv/bin/activate && \
+    pip install --no-cache-dir speedtest-cli && \
+    deactivate
+
+# Adicionar o binário do venv ao PATH
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Copiar script principal
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
 
-# Copiar arquivos web (se existirem)
+# Copiar arquivos web (se houver)
 COPY www /www
 
-# Executar o script
+# Comando padrão do contêiner
 CMD [ "/run.sh" ]
-
