Update Dockerfile to include bashio installation

--- a/speedtest-cli/Dockerfile
+++ b/speedtest-cli/Dockerfile
@@ -1,25 +1,23 @@
-# Base para sistemas x86_64 (Intel/AMD)
+# Base correta para seu mini PC Intel
 ARG BUILD_FROM=ghcr.io/home-assistant/amd64-base:3.19
 FROM ${BUILD_FROM}
 
-# Instalar dependências do sistema
-RUN apk add --no-cache python3 py3-pip curl jq
+# Instalar dependências e bashio
+RUN apk add --no-cache python3 py3-pip curl jq bash \
+    && curl -sSL https://raw.githubusercontent.com/hassio-addons/bashio/main/install.sh | bash -s --
 
-# Criar ambiente virtual e instalar o speedtest-cli dentro dele
+# Criar ambiente virtual Python e instalar speedtest-cli
 RUN python3 -m venv /opt/venv && \
     . /opt/venv/bin/activate && \
     pip install --no-cache-dir speedtest-cli && \
     deactivate
 
-# Adicionar o binário do venv ao PATH
 ENV PATH="/opt/venv/bin:$PATH"
 
-# Copiar script principal
+# Copiar arquivos do add-on
 COPY run.sh /run.sh
 RUN chmod a+x /run.sh
-
-# Copiar arquivos web (se houver)
 COPY www /www
 
-# Comando padrão do contêiner
+# Comando padrão
 CMD [ "/run.sh" ]
